fixed alignment on buttons

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ button {
     display: block;
     background-color:#20a8b4;
     color: #fff;
-    text-align: center;
+    text-align: left;
     width: 100%;
     border-radius: 10px;
     border: none;
